# resthub_v2

./: Cargo.toml  README.md  github  github.pub  index.html
backend/: Cargo.toml
backend/assets/: test拷貝.md  test拷貝2.md  test拷貝3.md
backend/cn_assets/: test拷貝5.md
backend/src/: .main.rs.swp  main.rs
css/: dark_main.css  dark_main.scss  main.css  main.scss
model/: Cargo.toml
model/src/: post.rs
pages/about/: Cargo.toml
pages/about/src/: lib.rs
pages/content/: Cargo.toml
pages/content/src/: .lib.rs.swp  lib.rs
pages/home/: Cargo.toml
pages/home/src/: .lib.rs.swp  lib.rs
pages/search/: Cargo.toml
post/: test.md
router/: Cargo.toml
router/src/: lib.rs
src/: main.rs  routes.rs
utils/: Cargo.toml
utils/src/: language_provider.rs  lib.rs  theme_provider.rs
view/: Cargo.toml
view/src/: footer.rs  kanban.rs  lib.rs  nav.rs  post.rs
