[package]
name = "resthubs_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
stylist = "0.10"
log = "0.4.17"
wasm-logger = "0.2.0"
patternfly-yew = "0.2.3"
yew-router = "0.17.0"
view = {path = "view"}
router = {path = "router" }
about = { path = "pages/about" }
[workspace]

members = [
    "view",
    "router",
    "pages/about"	
]
