
[package]
name = "content"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
pulldown-cmark = "0.9.2"
log = "0.4.17"
stylist = {version = "0.10", features = ["yew_integration"]}
view = { path = "../../view"} 
utils = { path = "../../utils"}
