[package]
name = "home" 
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
log = "0.4.17"
stylist = {version = "0.10", features = ["yew_integration"]}
view = { path = "../../view"} 
web-sys = "0.3.61"
gloo-net = { version = "0.2.6", features = ["http"]}
wasm-bindgen-futures = "0.4.34"
serde = {version = "1.0.152", features = ["derive"] }
model = { path = "../../model"}
serde_json = "1.0"
